@@ -1,3 +1,8 @@
+2005-09-10  Zoltan Varga  <vargaz@gmail.com>
+
+	* ia64/ia64-codegen.h: Remove 'manual' emitting of instructions. 
+	Integrate emission of unwind directives into the assembly macros.
+
 2005-09-04  Zoltan Varga  <vargaz@gmail.com>
 
 	* ia64/ia64-codegen.h (ia64_no_stop): New macro.
